# Spotify_Scope_Plugin

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
scripts/: set_song.py  spotify_auth.py  test_local.py
src/scope_spotify/: __init__.py  config_manager.py  lyrics_client.py  pipeline.py  schema.py  spotify_client.py
