[project]
name = "scope-spotify"
version = "0.1.0"
description = "Spotify integration for Daydream Scope - generate AI prompts from music and lyrics"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Shih-Yu"}
]
keywords = ["scope", "spotify", "ai", "prompts", "lyrics", "daydream"]

dependencies = [
    "spotipy>=2.23.0",  # PyPI package name; imported as spotify in code
]

[project.entry-points."scope"]
scope_spotify = "scope_spotify"

[project.urls]
Repository = "https://github.com/Shih-Yu/Spotify_Scope_Plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_spotify"]
