[project]
name = "scope-spotify"
version = "0.1.0"
description = "Spotify integration for Daydream Scope - generate AI prompts from music and lyrics"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Shih-Yu"}
]
keywords = ["scope", "spotify", "ai", "prompts", "lyrics", "daydream"]

dependencies = [
    "spotipy",  # No version pin to avoid conflict with Scope's environment
]

[project.optional-dependencies]
lyrics-app = ["fastapi", "uvicorn[standard]", "python-dotenv"]

[project.entry-points."scope"]
scope_spotify = "scope_spotify"

[project.urls]
Repository = "https://github.com/Shih-Yu/Spotify_Scope_Plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_spotify"]
